# acre-nexus

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  README.md  TODO.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/.cargo/: audit.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: accounting.rs  app_workflow.rs  audit.rs  auth.rs  bankfeed.rs  billing.rs  config.rs  cors.rs  db.rs  deals.rs  deposits.rs  documents.rs  dto.rs  error.rs  esign.rs  finance.rs  guards.rs  helpdesk.rs  itest.rs  leasedoc.rs  listing_sync.rs  mail.rs  main.rs  metrics.rs  mfa.rs  notify.rs  oauth.rs  observability.rs  openapi.rs  payables.rs  payments.rs  payouts.rs  pdf.rs  pii.rs  ratelimit.rs  rbac.rs  reminders.rs  renewals.rs  rentals_occupancy.rs  saas.rs  (+15 more)
backend/crates/api/src/audit/: actions.rs  actor.rs  fairing.rs  mod.rs  record.rs  request_log.rs  skip.rs
backend/crates/api/src/auth/: guard.rs  jwt.rs  mod.rs  passwords.rs  secrets.rs
backend/crates/api/src/email/: mod.rs
backend/crates/api/src/enrichment/: data.rs  geocode.rs  mod.rs  runner.rs  simulated.rs  source.rs
backend/crates/api/src/modules/: accounting.rs  calendar.rs  domains.rs  enrichment.rs  entities.rs  flips.rs  hoa.rs  integrations.rs  lease_builder.rs  leasing.rs  llc_onboarding.rs  maintenance.rs  messaging.rs  mod.rs  properties.rs  rehab.rs  rentals.rs  reports.rs  search.rs  syndication.rs  test_jobs.rs  theming.rs  title.rs  vendor_api.rs
backend/crates/api/src/notify/: delivery.rs  mod.rs  webpush.rs
backend/crates/api/src/providers/: bank.rs  client.rs  dns.rs  mod.rs  payments.rs  screening.rs  webhook.rs  webhook_out.rs
backend/crates/api/src/rbac/: catalog.rs  grants.rs  mod.rs  permission.rs  personas.rs  roles.rs  scope.rs
backend/crates/api/src/routes/: api_tokens.rs  applications.rs  auth.rs  iam.rs  llcs.rs  mod.rs  modules.rs  platform.rs  portfolio.rs  properties.rs  public.rs  theme.rs  vendor.rs
backend/crates/api/src/storage/: mod.rs
backend/crates/api/src/tenancy/: helpers.rs  mod.rs  public.rs  resolve.rs  scope.rs
backend/crates/api/src/tokens/: mint.rs  mod.rs  principal.rs
backend/crates/client/: Cargo.toml
backend/crates/client/src/: lib.rs
backend/crates/client/src/entity/: application.rs  counterparty.rs  counterparty_note.rs  mod.rs
backend/crates/client/src/migration/: m20240101_000001_init.rs  m20240101_000002_rls.rs  m20240101_000008_investing.rs  mod.rs
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: application.rs  application_event.rs  asset.rs  assignment.rs  audit_log.rs  background_job.rs  bank_account.rs  bank_txn.rs  capital_call.rs  capital_call_line.rs  deal.rs  deal_event.rs  deposit_deduction.rs  deposit_disposition.rs  distribution.rs  distribution_line.rs  document.rs  domain.rs  entity_ownership.rs  esign_envelope.rs  esign_event.rs  esign_signer.rs  federated_identity.rs  fee_schedule.rs  financial_snapshot.rs  hoa_arc_request.rs  hoa_assessment.rs  hoa_association.rs  hoa_member.rs  hoa_violation.rs  impersonation_session.rs  inbound_email.rs  inspection.rs  inspection_item.rs  inventory_item.rs  investor_commitment.rs  lead.rs  lease.rs  lease_charge.rs  lease_document.rs  (+58 more)
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20240101_000001_init.rs  m20240101_000002_rls.rs  m20240101_000003_modules.rs  m20240101_000005_audit.rs  m20240101_000006_audit_request.rs  m20240101_000007_property_data.rs  m20240101_000008_investing.rs  m20240101_000010_tenancy_entities.rs  m20240101_000011_platform_plane.rs  m20240101_000012_domains_onboarding.rs  m20240101_000013_leasing_lifecycle.rs  m20240101_000014_lease_doc_signature.rs  m20240101_000015_rls_enforce.rs  m20240101_000016_assignments.rs  m20240101_000017_settings_app_workflow.rs  m20240101_000018_integrations.rs  m20240101_000019_notifications.rs  m20240101_000020_esign.rs  m20240101_000021_application_pipeline.rs  m20240101_000022_renter_profile.rs  m20240101_000023_pipeline_indexes.rs  m20240101_000024_accounting.rs  m20240101_000025_screening.rs  m20240101_000026_property_profile.rs  m20240101_000027_payables.rs  m20240101_000028_calendar.rs  m20240101_000029_email.rs  m20240101_000030_webhooks.rs  m20240101_000031_resident_portal.rs  m20240101_000032_helpdesk.rs  m20240101_000033_maintenance_full.rs  m20240101_000034_maintenance_ops.rs  m20240101_000035_deals.rs  m20240101_000036_rehab.rs  m20240101_000037_platform_billing.rs  m20240101_000038_rls_empty_guc.rs  m20240101_000039_syndication.rs  m20240101_000040_hoa.rs  m20240101_000041_leasing_crm_renewals.rs  (+2 more)
backend/crates/property/: Cargo.toml
backend/crates/property/src/: lib.rs
backend/crates/property/src/entity/: enrichment_run.rs  generated_document.rs  listing.rs  llc.rs  llc_branding.rs  llc_document.rs  llc_template.rs  maintenance_ticket.rs  mod.rs  ownership.rs  property.rs  property_utility.rs  workflow_event.rs
backend/crates/user/: Cargo.toml
backend/crates/user/src/: lib.rs
backend/deploy/: roles.sql
backend/scripts/: postgres-setup-report-20260628-205335.md  setup-postgres.sh
backend/scripts/secrets/: acre.env  client.env  property.env  user.env
(+578 files in other folders)
