[package]
name = "api"
version.workspace = true
edition.workspace = true
default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

sea-orm = { workspace = true }
rocket = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
