[package]
name = "entity"
version.workspace = true
edition.workspace = true

[lib]
name = "entity"
path = "src/lib.rs"

# Facade crate: re-exports the per-domain entity crates (acre_user /
# acre_property / acre_client) under the historical `entity::*` paths so the
# `api` crate's imports are unchanged after the database split.
[dependencies]
acre_user = { path = "../user" }
acre_property = { path = "../property" }
acre_client = { path = "../client" }
