[package]
name = "acre_property"
version.workspace = true
edition.workspace = true

[lib]
name = "acre_property"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
